k8s/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: cocktails
spec:
  replicas: 1
  selector:
    matchLabels: { app: frontend }
  template:
    metadata:
      labels: { app: frontend }
    spec:
      containers:
        - name: frontend
          image: ivanoskif/ci-cd-cocktails-frontend:latest
          imagePullPolicy: Always
          ports: [{ containerPort: 80 }]
