k8s/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: cocktails
spec:
  selector: { app: api }
  ports:
    - port: 8000
      targetPort: 8000
