k8s/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: cocktails
spec:
  selector: { app: frontend }
  ports:
    - port: 80
      targetPort: 80
