k8s/mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: cocktails
spec:
  clusterIP: None
  selector: { app: mongo }
  ports:
    - name: mongo
      port: 27017
