k8s/ingress.aks.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cocktails
  namespace: cocktails
spec:
  ingressClassName: nginx
  rules:
    - host: cocktails.145.133.97.172.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000
